add emad comments to the papper, and add authors to the paper

--- a/main.tex
+++ b/main.tex
@@ -43,11 +43,12 @@
 \begin{document}
 \title{On Characterizing and Modeling Defect Technical Debt}
 
-\author{\IEEEauthorblockN{Everton da S. Maldonado}
+\author{\IEEEauthorblockN{Everton da S. Maldonado, Emad Shihab and Peter C. Rigby}
 
 \IEEEauthorblockA{Department of Computer Science and Software Engineering\\Concordia University,
 Montreal, Canada\\
-\url{everton.maldonado@gmail.com}}}
+\url{e_silvam@encs.concordia.ca}, \url{emad.shihab@concordia.ca},
+\url{peter.rigby@concordia.ca}}}
 
 \maketitle
 
